--- a/.github/workflows/reuse.linux.yml
+++ b/.github/workflows/reuse.linux.yml
@@ -347,3 +347,13 @@ jobs:
           version: 1.2
           target: x86_64-unknown-linux-gnu
           category: default
+  test_distribution:
+    needs: [ build ]
+    runs-on: [ self-hosted, X64, Linux, 4c8g, "${{ inputs.runner_provider }}" ]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/pack_distribution
+        with:
+          version: 1.2
+          arch: x86_64
+          packager: deb
