chore(query): spilt binary symbol

--- a/.github/workflows/reuse.linux.yml
+++ b/.github/workflows/reuse.linux.yml
@@ -354,6 +354,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/pack_distribution
         with:
-          version: 1.2
+          version: v1.2.661-nightly
           arch: x86_64
           packager: deb
