refactor: use jiff crate replace chrono in date/timestamp func (#16787)
* chore: use jiff crate replace some chrono

Done:

register_diff_functions(registry);
register_to_number_functions(registry);
register_add_functions(registry);
register_sub_functions(registry);
register_timestamp_to_date
register_date_to_timestamp
register_to_string
register_string_to_date
register_string_to_timestamp

TODO:

register_real_time_functions(registry);
register_rounder_functions(registry);

* add feature tzdb-bundle-always

* register_real_time_functions done

* register_rounder_functions done

* clamp max/min second

* rm TzLut

* cargo machete

* support year < 1000

* resolve conflicts

--- a/src/query/expression/Cargo.toml
+++ b/src/query/expression/Cargo.toml
@@ -25,7 +25,6 @@ bumpalo = { workspace = true }
 chrono = { workspace = true }
 chrono-tz = { workspace = true }
 comfy-table = { workspace = true }
-dashmap = { workspace = true }
 databend-common-ast = { workspace = true }
 databend-common-base = { workspace = true }
 databend-common-column = { workspace = true }
@@ -44,6 +43,7 @@ geozero = { workspace = true }
 hex = { workspace = true }
 hyper-util = { workspace = true }
 itertools = { workspace = true }
+jiff = { workspace = true }
 jsonb = { workspace = true }
 lexical-core = { workspace = true }
 log = { workspace = true }
