--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Checkout Docs
         uses: actions/checkout@v4
         with:
-          repository: datafuselabs/databend-docs
+          repository: databendlabs/databend-docs
           ref: main
       - name: Get date
         shell: bash
@@ -83,10 +83,10 @@ jobs:
           mkdir -p docs/release-stable
           df="docs/release-stable/${{ env.DATE }}_${{ needs.create_release.outputs.version }}.md"
           echo "---" > $df
-          gh release view --repo datafuselabs/databend ${{ needs.create_release.outputs.version }} >> $df
+          gh release view --repo databendlabs/databend ${{ needs.create_release.outputs.version }} >> $df
           sed -i -E 's/^--$/---/g' $df
           sed -i -E '/^asset:/d' $df
-          sed -i -E 's_https://github.com/datafuselabs/databend/pull/([0-9]+)_[#\1](https://github.com/datafuselabs/databend/pull/\1)_g' $df
+          sed -i -E 's_https://github.com/databendlabs/databend/pull/([0-9]+)_[#\1](https://github.com/databendlabs/databend/pull/\1)_g' $df
           git add docs/release-stable
           git status
       - uses: peter-evans/create-pull-request@v4
@@ -99,7 +99,7 @@ jobs:
           delete-branch: true
 
   build_default:
-    runs-on: [self-hosted, "${{ matrix.runner }}", Linux, 16c32g, aws]
+    runs-on: [self-hosted, "${{ matrix.runner }}", Linux, 8c32g, aws]
     needs: create_release
     strategy:
       fail-fast: false
@@ -117,6 +117,7 @@ jobs:
         uses: ./.github/actions/build_linux
         env:
           DATABEND_RELEASE_VERSION: ${{ needs.create_release.outputs.version }}
+          DATABEND_ENTERPRISE_LICENSE_PUBLIC_KEY: ${{ secrets.DATABEND_ENTERPRISE_LICENSE_PUBLIC_KEY }}
         with:
           sha: ${{ github.sha }}
           target: ${{ matrix.target }}
@@ -130,8 +131,33 @@ jobs:
           cp ./target/${{ matrix.target }}/${{ env.BUILD_PROFILE }}/databend-* ./target/${{ env.BUILD_PROFILE }}/
           bash ./scripts/ci/ci-run-sqllogic-tests.sh base
 
+  build_musl:
+    runs-on: [self-hosted, X64, Linux, 8c32g, aws]
+    needs: create_release
+    strategy:
+      fail-fast: false
+      matrix:
+        target:
+          - x86_64-unknown-linux-musl
+          - aarch64-unknown-linux-musl
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.create_release.outputs.sha }}
+          fetch-depth: 0
+      - name: Build Release
+        uses: ./.github/actions/build_linux
+        env:
+          DATABEND_RELEASE_VERSION: ${{ needs.create_release.outputs.version }}
+          DATABEND_ENTERPRISE_LICENSE_PUBLIC_KEY: ${{ secrets.DATABEND_ENTERPRISE_LICENSE_PUBLIC_KEY }}
+        with:
+          sha: ${{ github.sha }}
+          target: ${{ matrix.target }}
+          artifacts: query,meta,metactl
+
   build_udf:
-    runs-on: [self-hosted, "${{ matrix.runner }}", Linux, 16c32g, aws]
+    runs-on: [self-hosted, "${{ matrix.runner }}", Linux, 8c32g, aws]
     needs: create_release
     strategy:
       fail-fast: false
@@ -149,6 +175,7 @@ jobs:
         uses: ./.github/actions/build_linux
         env:
           DATABEND_RELEASE_VERSION: ${{ needs.create_release.outputs.version }}
+          DATABEND_ENTERPRISE_LICENSE_PUBLIC_KEY: ${{ secrets.DATABEND_ENTERPRISE_LICENSE_PUBLIC_KEY }}
         with:
           sha: ${{ github.sha }}
           target: ${{ matrix.target }}
@@ -156,51 +183,21 @@ jobs:
           features: python-udf
           category: udf
 
-  build_hdfs:
-    runs-on: [self-hosted, "${{ matrix.runner }}", Linux, 16c32g, aws]
-    needs: create_release
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - { target: x86_64-unknown-linux-gnu, runner: X64 }
-          - { target: aarch64-unknown-linux-gnu, runner: ARM64 }
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ needs.create_release.outputs.sha }}
-          fetch-depth: 0
-      - name: Build Release
-        uses: ./.github/actions/build_linux
-        env:
-          DATABEND_RELEASE_VERSION: ${{ needs.create_release.outputs.version }}
-        with:
-          sha: ${{ github.sha }}
-          target: ${{ matrix.target }}
-          artifacts: sqllogictests,sqlsmith,metactl,meta,query
-          features: storage-hdfs
-          category: hdfs
-
   publish:
-    runs-on: [self-hosted, "${{ matrix.runner }}", Linux, 4c8g, aws]
-    needs: [create_release, build_default, build_hdfs]
+    runs-on: [self-hosted, X64, Linux, 2c8g, aws]
+    needs: [create_release, build_default, build_musl]
     strategy:
       fail-fast: false
       matrix:
         include:
           - category: default
             target: x86_64-unknown-linux-gnu
-            runner: X64
           - category: default
             target: aarch64-unknown-linux-gnu
-            runner: ARM64
-          - category: hdfs
-            target: x86_64-unknown-linux-gnu
-            runner: X64
-          - category: hdfs
-            target: aarch64-unknown-linux-gnu
-            runner: ARM64
+          - category: default
+            target: x86_64-unknown-linux-musl
+          - category: default
+            target: aarch64-unknown-linux-musl
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -254,7 +251,7 @@ jobs:
           category: ${{ matrix.category }}
 
   publish_testsuite:
-    runs-on: [self-hosted, X64, Linux, 4c8g, aws]
+    runs-on: [self-hosted, X64, Linux, 2c8g, aws]
     needs: [create_release, build_default]
     strategy:
       fail-fast: false
@@ -298,7 +295,7 @@ jobs:
           category: testsuite
 
   docker_all_in_one:
-    runs-on: [self-hosted, X64, Linux, 4c8g, aws]
+    runs-on: [self-hosted, X64, Linux, 2c8g, aws]
     needs: [create_release, build_default]
     steps:
       - name: Checkout
@@ -373,7 +370,7 @@ jobs:
           readme-filepath: ./docker/README.md
 
   docker_service:
-    runs-on: [self-hosted, X64, Linux, 4c8g, aws]
+    runs-on: [self-hosted, X64, Linux, 2c8g, aws]
     needs: [create_release, build_udf]
     strategy:
       fail-fast: false
@@ -444,7 +441,7 @@ jobs:
           file: ./docker/service/${{ matrix.service }}.Dockerfile
 
   distribution:
-    runs-on: [self-hosted, X64, Linux, 4c8g, aws]
+    runs-on: [self-hosted, X64, Linux, 2c8g, aws]
     needs: [create_release, build_default]
     strategy:
       matrix:
@@ -595,7 +592,7 @@ jobs:
 
   sqlsmith:
     needs: [create_release, notify]
-    runs-on: [self-hosted, X64, Linux, 4c8g, aws]
+    runs-on: [self-hosted, X64, Linux, 2c8g, aws]
     steps:
       - uses: actions/checkout@v4
         with:
@@ -620,7 +617,7 @@ jobs:
 
   metachaos:
     needs: [create_release, notify]
-    runs-on: [self-hosted, X64, Linux, 8c16g, aws]
+    runs-on: [self-hosted, X64, Linux, 4c16g, aws]
     steps:
       - uses: actions/checkout@v4
         with:
@@ -646,7 +643,7 @@ jobs:
             await script({context, core})
 
   # sharing:
-  #   runs-on: [self-hosted, X64, Linux, 4c8g, aws]
+  #   runs-on: [self-hosted, X64, Linux, 2c8g, aws]
   #   needs: [create_release, notify]
   #   steps:
   #     - uses: actions/checkout@v4
@@ -655,7 +652,7 @@ jobs:
   #     - name: checkout share endpoint
   #       uses: actions/checkout@v4
   #       with:
-  #         repository: datafuselabs/share-endpoint
+  #         repository: databendlabs/share-endpoint
   #         token: ${{ secrets.DATABEND_BOT_TOKEN }}
   #         path: share-endpoint
   #     - name: Download artifacts
