chore(ci): enable overflow-checks  in ci profile

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -573,7 +573,7 @@ incremental = true
 
 [profile.ci]
 inherits = "release"
-overflow-checks = false
+overflow-checks = true
 incremental = false
 debug-assertions = true
 
