chore: bump opensrv (#16893)
* chore: bump opensrv to 6cbb806

* chore(ci): adjust runner size (#16879)

* chore(ci): adjust runner size

* z

* z

* z

* z

* z

* z

* z

* z

* z

* z

---------

Co-authored-by: everpcpc <everpcpc@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -364,10 +364,6 @@ opt-level = "s"
 # databend-query = { codegen-units = 4 }
 # databend-binaries = { codegen-units = 4 }
 
-[profile.bench]
-debug = true
-overflow-checks = false
-
 [profile.dev]
 split-debuginfo = "unpacked"
 overflow-checks = false
@@ -381,6 +377,10 @@ gimli = { opt-level = 3 }
 miniz_oxide = { opt-level = 3 }
 object = { opt-level = 3 }
 rustc-demangle = { opt-level = 3 }
+
+[profile.bench]
+debug = true
+overflow-checks = false
 
 [profile.test]
 opt-level = 0
@@ -405,7 +405,9 @@ ethnum = { git = "https://github.com/ariesdevil/ethnum-rs", rev = "4cb05f1" }
 openai_api_rust = { git = "https://github.com/datafuse-extras/openai-api", rev = "819a0ed" }
 # patched opendal which categories the XML dersierialization errors as recoverable
 opendal = { git = "https://github.com/datafuse-extras/opendal-for-release-v1.2.636", rev = "6c490a0" }
+opensrv-mysql = { git = "https://github.com/databendlabs/opensrv", rev = "6cbb806" }
 orc-rust = { git = "https://github.com/youngsofun/datafusion-orc", rev = "1745375" }
 recursive = { git = "https://github.com/zhang2014/recursive.git", rev = "6af35a1" }
 sled = { git = "https://github.com/datafuse-extras/sled", tag = "v0.34.7-datafuse.1" }
 xorfilter-rs = { git = "https://github.com/datafuse-extras/xorfilter", tag = "databend-alpha.4" }
+
