fix: typo in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -406,7 +406,7 @@ openai_api_rust = { git = "https://github.com/datafuse-extras/openai-api", rev =
 # patched opendal which categories the XML dersierialization errors as recoverable
 opendal = { git = "https://github.com/datafuse-extras/opendal-for-release-v1.2.636", rev = "6c490a0" }
 
-# till new verion(> 0.7) of opensrv released, locked on commit hash
+# till new version(> 0.7) of opensrv released, locked on commit hash
 opensrv-mysql = { git = "https://github.com/databendlabs/opensrv", rev = "6cbb806" }
 orc-rust = { git = "https://github.com/youngsofun/datafusion-orc", rev = "1745375" }
 recursive = { git = "https://github.com/zhang2014/recursive.git", rev = "6af35a1" }
