--- a/Cargo.toml
+++ b/Cargo.toml
@@ -369,7 +369,6 @@ opendal = { version = "0.50.1", features = [
     "services-moka",
     "services-webhdfs",
     "services-huggingface",
-    "services-redis",
 ] }
 openraft = { version = "0.10.0", features = [
     "serde",
@@ -409,7 +408,7 @@ raft-log = { version = "0.2.3" }
 rand = { version = "0.8.5", features = ["small_rng"] }
 rayon = "1.9.0"
 recursive = "0.1.1"
-redis = { version = "0.27.5", features = ["connection-manager"] }
+redis = { version = "0.27.5", features = ["tokio-comp", "connection-manager"] }
 regex = "1.8.1"
 replace_with = "0.1.7"
 reqwest = { version = "0.12", default-features = false, features = [
