--- a/Cargo.toml
+++ b/Cargo.toml
@@ -573,7 +573,7 @@ incremental = true
 
 [profile.ci]
 inherits = "release"
-overflow-checks = false
+overflow-checks = true
 incremental = false
 debug-assertions = true
 
@@ -583,7 +583,7 @@ debug-assertions = true
 
 [profile.dev]
 split-debuginfo = "unpacked"
-overflow-checks = false
+overflow-checks = true
 # Report to https://github.com/rust-lang/rust/issues/100142 if incremental works well
 incremental = true
 
