--- a/src/tests/sqlsmith/Cargo.toml
+++ b/src/tests/sqlsmith/Cargo.toml
@@ -9,12 +9,12 @@ edition = { workspace = true }
 [dependencies]
 chrono-tz = { workspace = true }
 clap = { workspace = true }
+cookie = { workspace = true }
 databend-common-ast = { workspace = true }
 databend-common-exception = { workspace = true }
 databend-common-expression = { workspace = true }
 databend-common-formats = { workspace = true }
 databend-common-functions = { workspace = true }
-databend-common-http = { workspace = true }
 databend-common-io = { workspace = true }
 databend-common-sql = { workspace = true }
 ethnum = { workspace = true }
@@ -22,10 +22,13 @@ itertools = { workspace = true }
 jiff = { workspace = true }
 jsonb = { workspace = true }
 rand = { workspace = true }
+reqwest = { workspace = true, features = ["cookies"] }
+serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+url = { workspace = true }
 
 [[bin]]
 name = "databend-sqlsmith"
