support Interval DataType
:) select to_interval('02:01'), to_interval('1 year 1 day 1 hour');

┌───────────────────────────────────────────────────────────┐
│ to_interval('02:01') │ to_interval('1 year 1 day 1 hour') │
│       Interval       │              Interval              │
├──────────────────────┼────────────────────────────────────┤
│ 2:01:00              │ 1year 1day 1:00:00                 │
└───────────────────────────────────────────────────────────┘

--- a/src/common/column/Cargo.toml
+++ b/src/common/column/Cargo.toml
@@ -21,7 +21,7 @@ column-default = [
 ]
 
 [dependencies]
-
+borsh = { workspace = true, features = ["derive"] }
 databend-common-base = { workspace = true }
 databend-common-exception = { workspace = true }
 
