--- a/src/query/service/Cargo.toml
+++ b/src/query/service/Cargo.toml
@@ -51,6 +51,7 @@ chrono = { workspace = true }
 chrono-tz = { workspace = true }
 ctor = { workspace = true }
 dashmap = { workspace = true }
+enum-as-inner = { workspace = true }
 
 databend-common-ast = { workspace = true }
 databend-common-base = { workspace = true }
