migrate builtin function lookup to unicase

--- a/src/query/functions/Cargo.toml
+++ b/src/query/functions/Cargo.toml
@@ -61,6 +61,7 @@ siphasher = { workspace = true }
 strength_reduce = { workspace = true }
 stringslice = { workspace = true }
 twox-hash = { workspace = true }
+unicase = { workspace = true }
 
 [dev-dependencies]
 comfy-table = { workspace = true }
