chore(query): revert bumpalo version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -239,7 +239,7 @@ borsh = { version = "1.2.1", features = ["derive"] }
 brotli = "3.3"
 bstr = "1"
 buf-list = "1.0.3"
-bumpalo = "3.12.0"
+bumpalo = { git = "https://github.com/fitzgen/bumpalo.git", rev = "50ba1bdd" }
 byte-unit = "4.0.19"
 bytemuck = { version = "1", features = ["derive"] }
 byteorder = "1.4.3"
